新增切换全屏按钮
新增 切换全屏模式
调整 棋子样式细节

--- a/othello.html
+++ b/othello.html
@@ -45,6 +45,7 @@
 				<button onclick="confirm('即将执行开局操作，该操作不可撤销。') && startGame()">开始</button>
 				<button onclick="undoHistory()">撤销</button>
 				<button onclick="redoHistory()">重做</button>
+				<button onclick="fullscreen()">全屏</button>
 			</div>
 		</div>
 	</div>
